# apikey-config

./: .gitignore  CNAME  README.md  apikey.py  public-keys.json  pyproject.toml  setup.py  verify.py
.github/workflows/: deploy.yml
